--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name"></string>
     <string name="reg_member">회원가입</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="people_prompt">사람수</string>
+    <string-array name="people_count">
+        <item>6</item>
+        <item>8</item>
+    </string-array>
+
 </resources>
